2008-02-14  Johannes Schmid <jhs@gnome.org>

	* plugins/language-support-cpp-java/plugin.c:
	(get_line_indentation_base), (get_line_auto_indentation),
	(on_editor_char_inserted_cpp):
	504905 – Ctrl-I (Auto Indent) doesn't indent properly after C++ public: and private:

2008-02-13  Johannes Schmid <jhs@gnome.org>

	* plugins/language-support-cpp-java/plugin.c:
	(is_iter_inside_string), (get_line_auto_indentation):
	Handle comments in the code and do not ask editor. Fixes scintilla
	indentation (sourceview does not report comments anyway).
	
	* plugins/sourceview/sourceview-cell.c: (iiter_diff):
	Diff with correct sign (also fixes some issues with language-support)

2008-02-13  Johannes Schmid <jhs@gnome.org>

	* plugins/language-support-cpp-java/plugin.c:
	(get_line_indentation_base):
	Act even more clever for comments. Indent /* */ comments correctly
	for multilines

2008-02-13  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/sourceview.c: (ieditor_set_tab_size):
	Also set indentation size correctly, when tab size is set
	by language support plugin

2008-02-13  Johannes Schmid <jhs@gnome.org>

	* plugins/language-support-cpp-java/plugin.c:
	(get_line_indentation_base):
	
	Indent lines after comments correctly

2008-02-13  Johannes Schmid <jhs@gnome.org>

	* libanjuta/anjuta-launcher.c: (anjuta_launcher_set_encoding_real),
	(anjuta_launcher_set_encoding), (anjuta_launcher_fork):
	* libanjuta/anjuta-launcher.h:
	Some more fixes from symbol-db-branch
	
	* src/Makefile.am:
	Move anjuta-shell to noinst_PROGRAMS as it is just a test

2008-02-12  Johannes Schmid <jhs@gnome.org>

  Patch from Gennaro Bellizio <genbell@tiscali.it>:
	* global-tags/Makefile.am:
	* AUTHORS
	#515954 – create_global_tags.sh: wrong anjuta-tags path
	
	* libanjuta/anjuta-launcher.c: (anjuta_launcher_initialize),
	(anjuta_launcher_dispose), (anjuta_launcher_check_password_real),
	(anjuta_launcher_scan_output), (anjuta_launcher_scan_error),