@@ -1,3 +1,8 @@
+2008-02-13  James Liggett <jrliggett@cox.net>
+
+	* plugins/subversion/svn-diff-command.c: (svn_diff_command_run):
+	Output in UTF-8 format to avoid hangs with the editor. (#516014)
+
 2008-02-14  Johannes Schmid <jhs@gnome.org>
 
 	* plugins/language-support-cpp-java/plugin.c:
